--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <option>3</option>
         <option>4</option>
     </select>
-    </div><iframe frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.com/cesca/form/Registreelgimnasio/formperma/U6b6UHOVMYOBHmd6nOLjr2M8AO4T5HdL4ootAxyXIeQ'></iframe>
-
-        <!-- <iframe height="460" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="https://eldenmorales.wufoo.com/embed/z1v6v80b17gl0f4/"> <a href="https://eldenmorales.wufoo.com/forms/z1v6v80b17gl0f4/">Fill out my Wufoo form!</a> </iframe> -->
+    </div>
+    
+    <iframe frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.com/cesca/form/Registreelgimnasio/formperma/U6b6UHOVMYOBHmd6nOLjr2M8AO4T5HdL4ootAxyXIeQ'></iframe>
 </body>
 </html>
