Cambios en el archivo index del directorio formulario/

--- a/formulario/index.html
+++ b/formulario/index.html
@@ -7,6 +7,9 @@
     <title>Formulario</title>
 </head>
 <body>
-    
+    <form action="#" method="post">
+        <label for="texto">Nombre</label>
+        <input type="text" placeholder="Escribe tu nombre">
+    </form>
 </body>
 </html>
